# STCase

./: .gitignore  README.md  STCaseDB_Human.csv  environment.yml  environment_cpu.yml  pyproject.toml  test.py
STACCI/: __init__.py  ccci.py  data_handler.py  model.py  pipeline.py  tl.py  trainer.py  utils.py
STCase/: __init__.py  model.py  pl.py  tl.py  trainer.py  utils.py
STCaseDB/: STCaseDB_Human_Complex.csv  STCaseDB_Mouse.csv
