[tool.poetry]
name = "STACCI"
version = "0.2.0"
description = "STACCI"
authors = ["Lzcstan <lzcstan@outlook.com>"]
readme = "README.md"
packages = [
  { include = "STACCI", from = "." },
]

[tool.poetry.dependencies]
python = "~3.10"
scipy = "*"
numpy = "*"
scikit-learn = "*"
anndata = "*"
matplotlib = "*"
pandas = "*"
scanpy = "*"
pot = "*"
torch-geometric = "2.3.0"
torch = "1.12.1"
torch-cluster = "1.6.0"
torch-scatter = "2.1.0"
torch-sparse = "0.6.16"
torch-spline-conv = "1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
repository = "https://github.com/Lzcstan/SARCCI