[tool.poetry]
name = "STACCI"
version = "0.3.0"
description = "STACCI"
authors = ["Lzcstan <lzcstan@outlook.com>"]
readme = "README.md"
packages = [
  { include = "STACCI", from = "." },
]

[tool.poetry.dependencies]
scipy = "*"
numpy = "*"
scikit-learn = "*"
anndata = "*"
matplotlib = "*"
pandas = "*"
scanpy = "*"
pot = "*"
torch-geometric = "*"
torch = "*"
torch-cluster = "*"
torch-scatter = "*"
torch-sparse = "*"
torch-spline-conv = "*"
pyg_lib = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
repository = "https://github.com/Lzcstan/STACCI"