[tool.poetry]
name = "STCase"
version = "0.9.7"
description = "Spatial Transcriptomics cell-cell Communication and subtype exploration"
authors = ["Lzcstan <lzcstan@outlook.com>"]
readme = "README.md"
packages = [
  { include = "STCase", from = "." },
]

[tool.poetry.dependencies]
ipykernel = "*"
scipy = "*"
scikit-learn = "*"
scikit-misc = "*"
anndata = "*"
matplotlib = "*"
pandas = "*"
scanpy = "*"
louvain = "*"
leidenalg = "*"
arboreto = "*"
ctxcore = "*"
pyscenic = "*"
netgraph = "*"
pycirclize = "*"
plotnine = "*"
kneed = "*"
pot = "*"
rich = "*"
torch-geometric = "*"
torch = "*"
torch-cluster = "*"
torch-scatter = "*"
torch-sparse = "*"
torch-spline-conv = "*"
pyg_lib = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
repository = "https://github.com/Lzcstan/STCase"